--- a/accounts/templates/accounts/recovery.html
+++ b/accounts/templates/accounts/recovery.html
@@ -17,7 +17,7 @@
     </div>
     {% endif %}
     
-    <div class="form-group">
+    <div>
         <label for="{{ form.words.id_for_label }}">Recovery Phrase:</label>
         {{ form.words }}
         <small>Enter all 24 words, separated by spaces</small>
