--- a/accounts/templates/accounts/verify_email.html
+++ b/accounts/templates/accounts/verify_email.html
@@ -17,7 +17,7 @@
         {% csrf_token %}
         
         {% if messages %}
-        <div class="messages">
+        <div>
             {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">
                 {{ message }}
